<resources>
    <string name="app_name">TheCarServiceApp</string>
    <string name="upComingTxt">Upcoming\nappointments</string>
    <string name="backButton">back</string>
    <string name="activity_name">Activity Name</string>
    <string name="strDate">Date</string>
    <string name="strCustomer">Customer</string>
    <string name="strServices">Services</string>
    <string name="strType">Type</string>
    <string name="strComment">Comments</string>
    <string name="editImage">edit</string>
    <string name="textViewValue">TextView</string>
    <string name="btnCancelAppointment">Cancel Appointment</string>
    <string name="btnSave">Save</string>
    <string name="strProvider">Provider</string>
    <string name="imgDesc">Img Description</string>
    <string name="editEmailPlaceholder">Email</string>
    <string name="editPasswordPlaceholder">Password</string>
    <string name="editConfirmPassPlaceholder">Confirm Password</string>
    <string name="editFirstNamePlaceholder">First Name</string>
    <string name="editLastNamePlaceholder">Last Name</string>
    <string name="editAddressPlaceholder">Address</string>
    <string name="editPhonePlaceholder">Phone Number</string>
    <string name="btnRegister">Register</string>
    <string name="btnLogin">Login</string>
    <string name="txtNoAccount">Don\'t have an account?</string>
    <string name="txtPrivacyPolicy">By registering, you accept all our terms and conditions.</string>
    <string name="txtRegisterLink">Register here.</string>
    <string name="txtBack">Go Back</string>
    <string name="txtMenu">Menu</string>
    <string name="strTotal">Total</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="save">Save</string>
    <string name="searchCustomer">Search a Customer</string>
    <string name="deleteCustomer">Delete Customer</string>
    <string name="searchByCity">Search by city</string>
    <string name="dateHourFormat">-- / -- / ---- - 00:00</string>
    <string name="serviceCostInfo">You can see the services and their fees you have provided below. Click on the relevant service to make some changes or you can edit a new service</string>
    <string name="popUpInfoUpdateService">You can update the service fee you have provided below or remove the service from your services</string>
    <string name="updateSrCost">Update Cost</string>
    <string name="btnRemoveService">Remove Service</string>
    <string name="txtAddNewService">Add new service</string>
    <string name="strAppStatus">Status</string>
</resources>