<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".view.LoginActivity">

    <LinearLayout
        android:id="@+id/formLoginLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/imgDesc"
            app:srcCompat="@drawable/logo_134x97" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="19dp"
            android:autofillHints=""
            android:background="@drawable/edit_field"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/editEmailPlaceholder"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/fixer_dark_blue"
            android:textColorHint="@color/fixer_gray"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@drawable/edit_field"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/editPasswordPlaceholder"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/fixer_dark_blue"
            android:textColorHint="@color/fixer_gray"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/registerLineLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/txtLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtNoAccount"
                android:textColor="@color/fixer_cyan"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtRegisterLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/txtRegisterLink"
                android:textColor="@color/fixer_gray"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <Button
            android:id="@+id/btnLogin"
            style="@style/ButtonTextNoCaps"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_enabled"
            android:text="@string/btnLogin"
            android:textColor="@color/fixer_dark_blue"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>