<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fixer_dark_blue"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".view.AppointmentDetailServiceProvider">

    <include
        android:id="@+id/toolbar"
        layout="@layout/fixer_toolbar" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:background="@drawable/rounded_background"
        android:orientation="horizontal"
        android:paddingLeft="40dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="76dp">


        <LinearLayout
            android:id="@+id/linearLayoutTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <ImageView
                    android:id="@+id/ImgBtnEdit"
                    android:layout_width="32dp"
                    android:layout_height="29dp"
                    android:contentDescription="@string/editImage"
                    android:src="@drawable/icon_editable"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/view"
                    app:tint="@color/fixer_dark_blue" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="92dp"
                    android:layout_height="wrap_content"

                    android:text="@string/strDate"
                    android:textColor="@color/fixer_dark_blue"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textViewDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/textViewValue"
                    android:textColor="@color/fixer_dark_blue"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="92dp"
                    android:layout_height="wrap_content"

                    android:text="@string/strCustomer"
                    android:textColor="@color/fixer_dark_blue"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewCusName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:text="@string/textViewValue"
                        android:textColor="@color/fixer_dark_blue"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewCusAdd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:text="@string/textViewValue"
                        android:textColor="@color/fixer_gray"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="92dp"
                    android:layout_height="wrap_content"

                    android:text="@string/strServices"
                    android:textColor="@color/fixer_dark_blue"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textViewServices"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/textViewValue"
                    android:textColor="@color/fixer_gray"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="92dp"
                    android:layout_height="wrap_content"

                    android:text="@string/strType"
                    android:textColor="@color/fixer_dark_blue"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textViewType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/textViewValue"
                    android:textColor="@color/fixer_gray"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="92dp"
                    android:layout_height="wrap_content"

                    android:text="@string/strComment"
                    android:textColor="@color/fixer_dark_blue"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textViewComment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/textViewValue"
                    android:textColor="@color/fixer_gray"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="92dp"
                    android:layout_height="wrap_content"

                    android:text="@string/strTotal"
                    android:textColor="@color/fixer_dark_blue"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txtTotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/textViewValue"
                    android:textColor="@color/fixer_gray"
                    android:textSize="15sp" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnCancelAppo"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/button_enabled"
        android:text="@string/btnCancelAppointment"
        android:textAllCaps="false"
        android:textColor="@color/fixer_dark_blue"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="304dp" />

</androidx.appcompat.widget.LinearLayoutCompat>
